--- a/FINAL/css/style.css
+++ b/FINAL/css/style.css
@@ -5,28 +5,7 @@ body{
   background:#101010;
 }
 
-/*h1{
-	font-size: 11vw;
-	font-family: 'Palanquin Dark', sans-serif;
-	-webkit-text-stroke: 2px #FFFFFF;
-	color:#101010;
-  	text-transform: uppercase;
-  	letter-spacing: 0.10em;
-}
-
-h2{
-	font-size: 1.5vw;
-  	font-family: 'IBM Plex Sans', sans-serif;
-  	text-transform: uppercase;
-    letter-spacing: 0.50em;
-  	color: #FEDA00;
-  	position:absolute;
-  	top:475px;
-}
-
-*/
-
-.ovo-artists {
+.ovo{
   width:100vw;
   height:100vh; 
   font-size: 10vw;
@@ -35,7 +14,7 @@ h2{
   letter-spacing: 0.10em;
 }
 
-.ovo-artist-cell{
+.ovo-song-cell{
   width:100vw;
   height:100vh;
   background:#101010;
@@ -48,46 +27,66 @@ h2{
 
 }
 
-.ovo-songs {
+.ovo-artist-cell{
     font-family: 'IBM Plex Sans', sans-serif;
     text-transform: uppercase;
     letter-spacing: 0.50em;
-    color: #FEDA00;
+    -webkit-text-stroke: 1px;
+    display: flex;
+    float:left;
+    position: absolute;
+    top:62%;
+    clear:left;
+    font-size:1.5vw;
+    float:left;  
 }
 
-.ovo-song-cell{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
+/* The Song + Artist Name */
 #OVO{
   -webkit-text-stroke: 2px #FFFFFF;
   color:#101010;
+  position: relative;
 }
-
+  #stream{
+    color:#FEDA00;
+  }
+ 
 #Spirit{
   background-image: url(http://majidjordan.com/app/uploads/2018/01/majid-jordan-spirit-play3_mobile.jpg);
   background-size: initial;
 }
+  #majid{
+  color: #F59297;
+  }
 
 #Mood{
   background-image: url(https://i.ytimg.com/vi/baxImKUepXM/maxresdefault.jpg);
   background-size: initial;
 }
+  #dvsn{
+  color:#AD386E;
+  }
 
 #NotNice{
   background-image: url(https://pbs.twimg.com/media/Cn8ZjnpW8AANdth.jpg);
   background-size: cover;
 }
+  #pnd{
+  color:#F9A11B;
+  }
 
 #Switch{
   background-image: url(http://images.genius.com/f8b7b5322cfee561373377996f1d52a6.1000x1000x1.jpg);
   background-size: cover;
+}
+  #roy{
+  color:#8C291E;
 }
 
 #Personal{
   background-image: url(https://cdn.singersroom.com/wp-content/uploads/2016/11/Plaza-Personal.jpg);
   background-size: cover;
 }
+  #plaza{
+    color:#EDD8E9;
+  }
