--- a/FINAL/css/style.css
+++ b/FINAL/css/style.css
@@ -7,6 +7,10 @@ body{
   margin:0;
 }
 
+#player {
+        width:1px; height:1px;
+      }
+
 .flickity-page-dots {
   bottom: -22px;
 }
@@ -61,7 +65,7 @@ body{
   position: relative;
 }
   #stream{
-    color:#FFFF;
+    color:#FEDA00;
   }
  
 #Spirit{
@@ -103,3 +107,24 @@ body{
   #plaza{
     color:#EDD8E9;
   }
+
+#About{
+  -webkit-text-stroke: 1px #FFFFFF;
+  color:#101010;
+  position: relative;
+  font-size:1.5vw;
+  letter-spacing: 0.50em;
+}
+  #true{
+    font-family: 'IBM Plex Sans', sans-serif;
+    text-transform: uppercase;
+    font-size:0.75vw;
+    color:#FEDA00;
+    padding: 0.1vh 30vh;
+    text-align:center;
+
+  }
+
+  a{
+  text-decoration:none;
+  color:#FFFF;
