--- a/FINAL/css/style.css
+++ b/FINAL/css/style.css
@@ -14,7 +14,7 @@ body{
 .flickity-page-dots {
   bottom: -22px;
 }
-/* dots are lines */
+/* DOTS BECOME LINES */
 .flickity-page-dots .dot {
   height: 4px;
   width: 40px;
@@ -50,10 +50,8 @@ body{
     letter-spacing: 0.50em;
     -webkit-text-stroke: 1px;
     display: flex;
-    float:left;
     position: absolute;
     top:62%;
-    clear:left;
     font-size:1.5vw;
     float:left;  
 }
@@ -125,11 +123,139 @@ body{
 
   }
 
+/* STYLING FOR HYPERLNKS + BUTTONS */
   a{
   text-decoration:none;
   color:#FFFF;
 }
   button {
-    padding:10px;
+    padding:10px 24px;;
+    color:#FFFF;
+    background:#000;
+    border: none;
+    font-family: 'IBM Plex Sans', sans-serif;
+    -webkit-transition-duration: 0.5s; 
+    transition-duration: 0.5s;
   }
 
+  button:hover {
+    background-color: #FEDA00; /* GOLDEN YELLOW */
+    color: #000;
+}
+
+
+.container {
+  height: 100vh;
+  width: 100%;
+}
+
+/* STYLING FOR THE HAMBURGER MENU */
+
+.toggle-button {
+  position: fixed;
+  top: 10px;
+  /*HORIZONTAL CENTERING: https://css-tricks.com/forums/topic/horizontal-centering-of-an-absolute-element/ */
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  padding: 9px 10px;
+  margin: 8px 15px 8px 0;
+  height: 20px;
+  width: 35px;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.bar {
+  background-color: white;
+  display: block;
+  width: 100%;
+  height: 5px;
+  border: 0;
+  -webkit-transition: all .35s ease;
+  transition: all .35s ease;
+}
+
+.bar + .bar {
+  margin-top: 4px;
+}
+
+.middle {
+  top: 15px;
+}
+
+.bottom {
+  top: 30px;
+}
+
+.toggle-button:hover {
+  opacity: .5;
+}
+
+.toggle-active .bar {
+  background-color: #FEDA00;
+}
+
+.toggle-active .top {
+  -webkit-transform: translateY(6px) translateX(0) rotate(45deg);
+}
+
+.toggle-active .middle {
+  opacity: 0;
+}
+
+.toggle-active .bottom {
+  -webkit-transform: translateY(-12px) translateX(0) rotate(-45deg);
+}
+
+
+/* STYLING FOR THE OVERLAY. THE SLIDING-DOWN EFFECT OF THE OVERLAY IS GIVEN BY THE INITIAL ZERO HEIGHT AND THE ONCLICK 100% HEIGHT */
+
+.overlay {
+  position: fixed;
+  background-image: linear-gradient(180deg, #262626 0%, #101010 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity .35s, visibility .35s, height .35s;
+}
+
+
+/* CLASS ADDED TO THE OVERLAY ON CLICK*/
+
+.nav-active {
+  opacity: 1;
+  visibility: visible;
+  height: 100%;
+}
+
+.overlay ul {
+  display: block;
+  position: relative;
+  top: 60px;
+  left: 0;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size:1.5vw;
+  letter-spacing: 0.50em;
+  text-transform: uppercase;
+  text-align: center;
+  list-style: none;
+  padding: 0;
+}
+
+.overlay ul li {
+  display: block;
+}
+
+.overlay ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+
+.hidden {
+  opacity: 0;
+}
