--- a/FINAL/css/style.css
+++ b/FINAL/css/style.css
@@ -125,7 +125,7 @@ body{
   #plaza{
     color:#EDD8E9;
   }
-  
+
 .container {
   height: 100vh;
   width: 100%;
@@ -203,6 +203,8 @@ body{
   visibility: hidden;
   opacity: 0;
   -webkit-transition: opacity .35s, visibility .35s, height .35s;
+
+  z-index:2;
 }
 
 
