--- a/FINAL/css/style.css
+++ b/FINAL/css/style.css
@@ -1,245 +1,253 @@
-@import url('https://fonts.googleapis.com/css?family=Palanquin+Dark:700');
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300');
+/* FONT IMPORTS */
+  @import url('https://fonts.googleapis.com/css?family=Palanquin+Dark:700');
+  @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300');
+  @import url('https://fonts.googleapis.com/css?family=Quantico');
 
-html,
-body{
-  background:#101010;
-  margin:0;
-}
-
-/* STYLING FOR HYPERLNKS + BUTTONS */
-  a{
-  text-decoration:none;
-  color:#FFFF;
-}
-  button {
-    padding:10px 24px;;
-    color:#FFFF;
-    background:#000;
-    border: none;
-    font-family: 'IBM Plex Sans', sans-serif;
-    -webkit-transition-duration: 0.5s; 
-    transition-duration: 0.5s;
+/* STYLING FOR ENTIRE SITE */
+  html,
+  body{
+    background:#101010;
+    margin:0;
   }
 
-  button:hover {
-    background-color: #FEDA00; /* GOLDEN YELLOW */
-    color: #000;
-}
-
-#player {
-        width:1px; height:1px;
-      }
-
-.flickity-page-dots {
-  bottom: -22px;
-}
-/* DOTS BECOME LINES */
-.flickity-page-dots .dot {
-  height: 4px;
-  width: 40px;
-  margin: 0;
-  border-radius: 0;
-}
-
-.ovo{
-  width:100vw;
-  height:80vh; 
-  font-size: 9vw;
-  font-family: 'Palanquin Dark', sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 0.10em;
-}
-
-.ovo-song-cell{
-  width:100vw;
-  height:80vh;
-  background:#101010;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-
-}
-
-.ovo-artist-cell{
-    font-family: 'IBM Plex Sans', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 0.50em;
-    -webkit-text-stroke: 1px;
-    display: flex;
-    position: absolute;
-    top:62%;
-    font-size:1.5vw;
-    float:left;  
-}
-
-/* The Song + Artist Name */
-#OVO{
-  -webkit-text-stroke: 2px #FFFFFF;
-  color:#101010;
-  position: relative;
-}
-  #stream{
-    color:#E0D3BF;
-  }
- 
-#Free{
-  background-image: url(http://majidjordan.com/app/uploads/2018/09/majid-jordan-spirit-banner2.jpg);
-  background-size: 60%;
-}
-  #majid{
-  color: #EB494B;
-  }
-
-#Mood{
-  background-image: url(https://aestheticmag.files.wordpress.com/2017/07/dvsn-canada-150-toronto-2017-2-copy.jpg);
-  background-size: 60%;
-}
-  #dvsn{
-  color:#7A3CA6;
-  }
-
-#Naked{
-  background-image: url(https://media.gq.com/photos/57b5c8a57c4c5fcf03df6337/16:9/pass/party-next-door-04.jpg);
-  background-size: 60%;
-}
-  #pnd{
-  color:#D89369;
-  }
-
-#NewNew{
-  background-image: url(https://static.highsnobiety.com/wp-content/uploads/2016/04/20111936/ovo-spring-2016-roy-woods-00.jpg);
-  background-size: 60%;
-}
-  #roy{
-  color:#FEFDFB;
-}
-
-#Personal{
-  background-image: url(http://www.16bars.de/wp-content/uploads/2017/06/Bildschirmfoto-2017-06-12-um-15.05.17-750x400.png);
-  background-size: 60%;
-}
-  #plaza{
-    color:#EDD8E9;
-  }
-
-.container {
+  .container {
   height: 100vh;
   width: 100%;
-}
+  }
+
+/* STYLING FOR HYPERLNKS + BUTTONS */
+    a{
+    text-decoration:none;
+    color:#FFFF;
+  }
+    button {
+      padding:10px 24px;;
+      color:#FFFF;
+      background:#000;
+      border: none;
+      font-family: 'Quantico', sans-serif;
+      opacity:0.75;
+      -webkit-transition-duration: 0.5s; 
+      transition-duration: 0.5s;
+    }
+
+    button:hover {
+      background-color: #FEDA00; /* GOLDEN YELLOW */
+      color: #000;
+  }
+
+  #menu{
+    position: relative;
+    top: 230px;
+    left: 420px;
+    z-index:1;
+  }
+
+  #player {
+    width:1px; height:1px;
+  }
+
+/* FLICKITY DOTS TO LINES */
+  .flickity-page-dots {
+    bottom: -22px;
+  }
+  .flickity-page-dots .dot {
+    height: 4px;
+    width: 40px;
+    margin: 0;
+    border-radius: 0;
+  }
+
+/* OVO CELLS */
+  .ovo{
+    width:100vw;
+    height:80vh; 
+    font-size: 9vw;
+    font-family: 'Palanquin Dark', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 0.10em;
+  }
+
+  .ovo-song-cell{
+    width:100vw;
+    height:80vh;
+    background:#101010;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+
+  }
+
+  .ovo-artist-cell{
+      font-family: 'IBM Plex Sans', sans-serif;
+      text-transform: uppercase;
+      letter-spacing: 0.50em;
+      -webkit-text-stroke: 1px;
+      display: flex;
+      position: absolute;
+      top:65%;
+      font-size:1.5vw;
+      float:left;  
+  }
+
+/* The Song + Artist Name */
+  #OVO{
+    -webkit-text-stroke: 1.5px #FFFFFF;
+    color:#101010;
+    position: relative;
+  }
+    #stream{
+      color:#F1DD38;
+    }
+   
+  #Free{
+    background-image: url(http://majidjordan.com/app/uploads/2018/09/majid-jordan-spirit-banner2.jpg);
+    background-size: 60%;
+  }
+    #majid{
+    color: #EB494B;
+    }
+
+  #Naked{
+    background-image: url(https://media.gq.com/photos/57b5c8a57c4c5fcf03df6337/16:9/pass/party-next-door-04.jpg);
+    background-size: 60%;
+  }
+    #pnd{
+    color:#D89369;
+    }
+
+  #NewNew{
+  background-image: url(https://static.highsnobiety.com/wp-content/uploads/2016/04/20111936/ovo-spring-2016-roy-woods-00.jpg);
+  background-size: 60%;
+  }
+  #roy{
+  color:#FEFDFB;
+  }
+
+  #Mood{
+    background-image: url(https://aestheticmag.files.wordpress.com/2017/07/dvsn-canada-150-toronto-2017-2-copy.jpg);
+    background-size: 60%;
+  }
+    #dvsn{
+    color:#7A3CA6;
+    }
+
+  #Personal{
+    background-image: url(http://www.16bars.de/wp-content/uploads/2017/06/Bildschirmfoto-2017-06-12-um-15.05.17-750x400.png);
+    background-size: 60%;
+  }
+    #plaza{
+      color:#EDD8E9;
+    }
 
 /* STYLING FOR THE HAMBURGER MENU */
+  .toggle-button {
+    position: fixed;
+    top: 10px;
+    /*HORIZONTAL CENTERING: https://css-tricks.com/forums/topic/horizontal-centering-of-an-absolute-element/ */
+    right: 0%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    padding: 9px 10px;
+    margin: 8px 15px 8px 0;
+    height: 20px;
+    width: 35px;
+    cursor: pointer;
+    z-index: 3;
+  }
 
-.toggle-button {
-  position: fixed;
-  top: 10px;
-  /*HORIZONTAL CENTERING: https://css-tricks.com/forums/topic/horizontal-centering-of-an-absolute-element/ */
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-  padding: 9px 10px;
-  margin: 8px 15px 8px 0;
-  height: 20px;
-  width: 35px;
-  cursor: pointer;
-  z-index: 3;
-}
+  .bar {
+    background-color: white;
+    display: block;
+    width: 100%;
+    height: 5px;
+    border: 0;
+    -webkit-transition: all .35s ease;
+    transition: all .35s ease;
+  }
 
-.bar {
-  background-color: white;
-  display: block;
-  width: 100%;
-  height: 5px;
-  border: 0;
-  -webkit-transition: all .35s ease;
-  transition: all .35s ease;
-}
+  .bar + .bar {
+    margin-top: 4px;
+  }
 
-.bar + .bar {
-  margin-top: 4px;
-}
+  .middle {
+    top: 15px;
+  }
 
-.middle {
-  top: 15px;
-}
+  .bottom {
+    top: 30px;
+  }
 
-.bottom {
-  top: 30px;
-}
+  .toggle-button:hover {
+    opacity: .5;
+  }
 
-.toggle-button:hover {
-  opacity: .5;
-}
+  .toggle-active .bar {
+    background-color: #FEDA00;
+  }
 
-.toggle-active .bar {
-  background-color: #FEDA00;
-}
+  .toggle-active .top {
+    -webkit-transform: translateY(6px) translateX(0) rotate(45deg);
+  }
 
-.toggle-active .top {
-  -webkit-transform: translateY(6px) translateX(0) rotate(45deg);
-}
+  .toggle-active .middle {
+    opacity: 0;
+  }
 
-.toggle-active .middle {
-  opacity: 0;
-}
-
-.toggle-active .bottom {
-  -webkit-transform: translateY(-12px) translateX(0) rotate(-45deg);
-}
+  .toggle-active .bottom {
+    -webkit-transform: translateY(-12px) translateX(0) rotate(-45deg);
+  }
 
 
 /* STYLING FOR THE OVERLAY. THE SLIDING-DOWN EFFECT OF THE OVERLAY IS GIVEN BY THE INITIAL ZERO HEIGHT AND THE ONCLICK 100% HEIGHT */
-
-.overlay {
-  position: fixed;
-  background-image: linear-gradient(180deg, #262626 0%, #101010 100%);
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 0;
-  visibility: hidden;
-  opacity: 0;
-  -webkit-transition: opacity .35s, visibility .35s, height .35s;
-
-  z-index:2;
-}
+  .overlay {
+    position: fixed;
+    background-image: linear-gradient(180deg, #262626 0%, #101010 100%);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: opacity .35s, visibility .35s, height .35s;
+    z-index:2;
+  }
 
 
 /* CLASS ADDED TO THE OVERLAY ON CLICK*/
+  .nav-active {
+    opacity: 1;
+    visibility: visible;
+    height: 100%;
+  }
 
-.nav-active {
-  opacity: 1;
-  visibility: visible;
-  height: 100%;
-}
+  .overlay ul {
+    display: block;
+    position: relative;
+    top: 60px;
+    left: 0;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size:1.5vw;
+    letter-spacing: 0.50em;
+    text-transform: uppercase;
+    text-align: center;
+    list-style: none;
+    padding: 0;
+  }
 
-.overlay ul {
-  display: block;
-  position: relative;
-  top: 60px;
-  left: 0;
-  font-family: 'IBM Plex Sans', sans-serif;
-  font-size:1.5vw;
-  letter-spacing: 0.50em;
-  text-transform: uppercase;
-  text-align: center;
-  list-style: none;
-  padding: 0;
-}
+  .overlay ul li {
+    display: block;
+  }
 
-.overlay ul li {
-  display: block;
-}
-
-.overlay ul li a {
-  color: #fff;
-  text-decoration: none;
-}
+  .overlay ul li a {
+    color: #fff;
+    text-decoration: none;
+  }
 
 
-.hidden {
-  opacity: 0;
-}
+  .hidden {
+    opacity: 0;
+  }
