--- a/FINAL/css/style.css
+++ b/FINAL/css/style.css
@@ -20,6 +20,7 @@
     text-decoration:none;
     color:#FFFF;
   }
+
     button {
       padding:10px 24px;;
       color:#FFFF;
@@ -27,8 +28,8 @@
       border: none;
       font-family: 'Quantico', sans-serif;
       opacity:0.75;
-      -webkit-transition-duration: 0.5s; 
-      transition-duration: 0.5s;
+      -webkit-transition-duration: 0.50s; 
+      transition-duration: 0.50s;
     }
 
     button:hover {
@@ -37,9 +38,10 @@
   }
 
   #menu{
-    position: relative;
-    top: 230px;
-    left: 420px;
+    position: fixed;
+    top: 25%;
+    left: 50%;
+    transform:translateX(-50%);
     z-index:1;
   }
 
@@ -56,6 +58,117 @@
     width: 40px;
     margin: 0;
     border-radius: 0;
+  }
+
+/* STYLING FOR THE HAMBURGER MENU */
+  .toggle-button {
+    position: fixed;
+    top: 10px;
+    /*HORIZONTAL CENTERING: https://css-tricks.com/forums/topic/horizontal-centering-of-an-absolute-element/ */
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);  
+    padding: 9px 10px;
+    margin: 8px 15px 8px 0;
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+    z-index: 3;
+  }
+
+  .bar {
+    background-color: none;
+    outline-width: 0.25px;
+    outline-style: solid;
+    color:#FFFF;
+    display:block;
+    width: 100%;
+    height: 5px;
+    /*border: 0;*/
+    -webkit-transition: all .50s ease;
+    transition: all .50s ease;
+  }
+
+  .bar + .bar {
+    margin-top: 4px;
+  }
+
+  .middle {
+    top: 15px;
+  }
+
+  .bottom {
+    top: 30px;
+  }
+
+  .toggle-button:hover {
+    opacity: .75;
+  }
+
+  .toggle-active .bar {
+    background-color: #FEDA00;
+  }
+
+  .toggle-active .top {
+    -webkit-transform: translateY(6px) translateX(0) rotate(45deg);
+  }
+
+  .toggle-active .middle {
+    opacity: 0;
+  }
+
+  .toggle-active .bottom {
+    -webkit-transform: translateY(-12px) translateX(0) rotate(-45deg);
+  }
+
+
+/* STYLING FOR THE OVERLAY. THE SLIDING-DOWN EFFECT OF THE OVERLAY IS GIVEN BY THE INITIAL ZERO HEIGHT AND THE ONCLICK 100% HEIGHT */
+  .overlay {
+    position: fixed;
+    background-image: linear-gradient(180deg, #262626 0%, #101010 100%);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: opacity .30s, visibility .30s, height .30s;
+    z-index:2;
+  }
+
+
+/* CLASS ADDED TO THE OVERLAY ON CLICK*/
+  .nav-active {
+    opacity: 1;
+    visibility: visible;
+    height: 100%;
+  }
+
+  .overlay ul {
+    display: block;
+    position: relative;
+    top: 60px;
+    left: 0;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size:1.10vw;
+    letter-spacing: 0.50em;
+    text-transform: uppercase;
+    text-align: center;
+    list-style: none;
+    padding: 0;
+  }
+
+  .overlay ul li {
+    display: block;
+  }
+
+  .overlay ul li a {
+    color: #fff;
+    text-decoration: none;
+  }
+
+  .hidden {
+    opacity: 0;
   }
 
 /* OVO CELLS */
@@ -78,7 +191,6 @@
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
-
   }
 
   .ovo-artist-cell{
@@ -88,7 +200,7 @@
       -webkit-text-stroke: 1px;
       display: flex;
       position: absolute;
-      top:65%;
+      top:68%;
       font-size:1.5vw;
       float:left;  
   }
@@ -143,111 +255,35 @@
       color:#EDD8E9;
     }
 
-/* STYLING FOR THE HAMBURGER MENU */
-  .toggle-button {
-    position: fixed;
-    top: 10px;
-    /*HORIZONTAL CENTERING: https://css-tricks.com/forums/topic/horizontal-centering-of-an-absolute-element/ */
-    right: 0%;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-    padding: 9px 10px;
-    margin: 8px 15px 8px 0;
-    height: 20px;
-    width: 35px;
-    cursor: pointer;
-    z-index: 3;
-  }
-
-  .bar {
-    background-color: white;
-    display: block;
-    width: 100%;
-    height: 5px;
-    border: 0;
-    -webkit-transition: all .35s ease;
-    transition: all .35s ease;
-  }
-
-  .bar + .bar {
-    margin-top: 4px;
-  }
-
-  .middle {
-    top: 15px;
-  }
-
-  .bottom {
-    top: 30px;
-  }
-
-  .toggle-button:hover {
-    opacity: .5;
-  }
-
-  .toggle-active .bar {
-    background-color: #FEDA00;
-  }
-
-  .toggle-active .top {
-    -webkit-transform: translateY(6px) translateX(0) rotate(45deg);
-  }
-
-  .toggle-active .middle {
-    opacity: 0;
-  }
-
-  .toggle-active .bottom {
-    -webkit-transform: translateY(-12px) translateX(0) rotate(-45deg);
-  }
-
-
-/* STYLING FOR THE OVERLAY. THE SLIDING-DOWN EFFECT OF THE OVERLAY IS GIVEN BY THE INITIAL ZERO HEIGHT AND THE ONCLICK 100% HEIGHT */
-  .overlay {
-    position: fixed;
-    background-image: linear-gradient(180deg, #262626 0%, #101010 100%);
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 0;
-    visibility: hidden;
-    opacity: 0;
-    -webkit-transition: opacity .35s, visibility .35s, height .35s;
-    z-index:2;
-  }
-
-
-/* CLASS ADDED TO THE OVERLAY ON CLICK*/
-  .nav-active {
-    opacity: 1;
-    visibility: visible;
-    height: 100%;
-  }
-
-  .overlay ul {
-    display: block;
+  #Final{
+    -webkit-text-stroke: 1px #FFFFFF;
+    color:#101010;
     position: relative;
-    top: 60px;
-    left: 0;
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size:1.5vw;
+    font-size:2vw;
     letter-spacing: 0.50em;
+    }
+
+    #fin{
+    font-family: 'IBM Plex Sans', sans-serif;
     text-transform: uppercase;
-    text-align: center;
-    list-style: none;
-    padding: 0;
+    font-size:0.85vw;
+    color:#FEDA00;
+    padding: 0.1vh 50vh;
+    position: absolute;
+    top:55%;
+    text-align:center;
+    }
+
+/* MEDIA DIMENSIONS */
+
+  @media (max-width: 1000px)  and (orientation: portrait) {
+    .ovo {
+      font-size:15vw;
+    }
   }
 
-  .overlay ul li {
-    display: block;
-  }
-
-  .overlay ul li a {
-    color: #fff;
-    text-decoration: none;
-  }
-
-
-  .hidden {
-    opacity: 0;
+@media (max-width: 1000px)  and (orientation: landscape) {
+    .ovo {
+      font-size:30vw;
+    }
   }
