--- a/FINAL/css/style.css
+++ b/FINAL/css/style.css
@@ -46,7 +46,10 @@
   }
 
   #player {
-    width:1px; height:1px;
+/*    width:1px; height:1px;*/
+
+position:fixed; 
+top: -10px; left:-10px;
   }
 
 /* FLICKITY DOTS TO LINES */
@@ -58,6 +61,11 @@
     width: 40px;
     margin: 0;
     border-radius: 0;
+  }
+
+  .flickity-button {
+    position: absolute;
+    background: none;
   }
 
 /* STYLING FOR THE HAMBURGER MENU */
@@ -83,7 +91,7 @@
     color:#FFFF;
     display:block;
     width: 100%;
-    height: 5px;
+    height: 4px;
     /*border: 0;*/
     -webkit-transition: all .50s ease;
     transition: all .50s ease;
@@ -110,7 +118,7 @@
   }
 
   .toggle-active .top {
-    -webkit-transform: translateY(6px) translateX(0) rotate(45deg);
+    -webkit-transform: translateY(10px) translateX(0) rotate(45deg);
   }
 
   .toggle-active .middle {
@@ -118,7 +126,7 @@
   }
 
   .toggle-active .bottom {
-    -webkit-transform: translateY(-12px) translateX(0) rotate(-45deg);
+    -webkit-transform: translateY(-6px) translateX(0) rotate(-45deg);
   }
 
 
