--- a/FINAL/css/style.css
+++ b/FINAL/css/style.css
@@ -237,7 +237,7 @@ background-size: 60%;
   #dvsn{
   color:#7A3CA6;
   }
-#Personal{
+#HoldUp{
 background-image: url(http://www.16bars.de/wp-content/uploads/2017/06/Bildschirmfoto-2017-06-12-um-15.05.17-750x400.png);
 background-size: 60%;
 }
