--- a/FINAL/css/style.css
+++ b/FINAL/css/style.css
@@ -230,12 +230,13 @@ background-size: 60%;
   #roy{
   color:#FEFDFB;
   }
-#Mood{
-background-image: url(https://aestheticmag.files.wordpress.com/2017/07/dvsn-canada-150-toronto-2017-2-copy.jpg);
-background-size: 60%;
+#GetIt{
+background-image: url(https://consequenceofsound.files.wordpress.com/2016/07/07212016_dvsn_erwincenter_saramarjoriestrick20160720_0003.jpg?quality=80);
+background-size: 80%;
 }
+/*https://aestheticmag.files.wordpress.com/2017/07/dvsn-canada-150-toronto-2017-2-copy.jpg*/
   #dvsn{
-  color:#7A3CA6;
+  color:#94B2FE;
   }
 #HoldUp{
 background-image: url(http://www.16bars.de/wp-content/uploads/2017/06/Bildschirmfoto-2017-06-12-um-15.05.17-750x400.png);
